# Web-Scrapper

./: main.py  pyproject.toml
